--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,66 +1,72 @@
 <html>
-  <head>
-    <title>ΔDENOX | Log-in</title>
-  </head>
-  <body>
-    <nav class="nav">
-      <div class="logo">
-        <h4>ΔDENOX</h4>
-      </div>
-    </nav>
-    <div class="container">
-      <form action="main.html">
-        <br />
-        <div class="log-box">
-          <br />
-          <div>
-            <h1>LOGIN</h1>
-            <h5>First Name Middle Name Last Name</h5>
-            <input type="text" class="input" />
-            <input type="text" class="input" />
-            <input type="text" class="input" />
+
+<head>
+	<title>ΔDENOX | Log-in</title>
+</head>
+
+<body>
+	<nav class="nav">
+		<div class="logo">
+			<h4>ΔDENOX</h4>
+		</div>
+	</nav>
+	<div class="container">
+		<form action="main.html">
+			<br />
+			<div class="log-box">
+				<br />
+				<div>
+					<h1>LOGIN</h1>
+					<h3>NAME</h3>
+					First&nbsp;&nbsp;&nbsp;&nbsp;
+					<input  type="text" class="input" /> <br>
+          Middle&nbsp;&nbsp;&nbsp;
+					<input  type="text" class="input" /><br>
+          Last &nbsp;&nbsp;&nbsp;&nbsp;
+					<input  type="text" class="input" /> <br>
+          </div> <br>
+					<div>
+						Address:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<input  type="text" class="input-add" />
           </div>
-          <div>
-            <h5>Address:</h5>
-            <input type="text" class="input" />
+						<div>
+							Age &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							<input  type="text" class="input" />
           </div>
-          <div>
-            <h5>Age</h5>
-            <input type="text" class="input" />
+							<div>
+								Gender &nbsp;&nbsp;
+								<select class="Gender" id="gender" required></select>
+							</div>
+							<div>
+								Birthday&nbsp;
+								<input class="input" type="text" class="input" />
           </div>
-          <div>
-            <h5>Gender</h5>
-            <select class="Gender" id="gender" required></select>
+								<div>
+									Email Add
+									<input class="input" type="text" class="input" />
           </div>
-          <div>
-            <h5>Birthday</h5>
-            <input type="text" class="input" />
+									<div>
+										Mobile No
+										<input class="input" type="text" class="input" />
           </div>
-          <div>
-            <h5>Email Address</h5>
-            <input type="text" class="input" />
-          </div>
-          <div>
-            <h5>Mobile Number</h5>
-            <input type="text" class="input" />
-          </div>
-          <br />
-          <input type="submit" class="btn" value="Submit" />
+										<br />
+										<input class="input" type="submit" class="btn" value="Submit"/>
         </div>
-      </form>
-      <div class="adds">
-        <img
+		</form>
+		<div class="adds">
+			<img
           class="adds1"
           src="https://i.pinimg.com/originals/94/0e/40/940e404626c3d1afb15497df81c6e147.png"
           alt=""
         />
       </div>
-      <br />
+			<br />
     </div>
-    <nav class="nav1">
-      <div class="logo">
-        <h6>Denox project 5HXC CPE6 2020</h6>
-      </div>
-    </nav>
-  </body>
+			<nav class="nav1">
+				<div class="logo">
+					<h6>Denox project 5HXC CPE6 2020</h6>
+				</div>
+			</nav>
+</body>
+
 </html>
