--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -18,36 +18,36 @@
 				<div>
 					<h1>LOGIN</h1>
 					<h3>NAME</h3>
-					First&nbsp;&nbsp;&nbsp;&nbsp;
-					<input  type="text" class="input" /> <br>
-          Middle&nbsp;&nbsp;&nbsp;
-					<input  type="text" class="input" /><br>
-          Last &nbsp;&nbsp;&nbsp;&nbsp;
-					<input  type="text" class="input" /> <br>
+					First
+					<input  id="First" type="text" class="input" /> <br>
+          Middle
+					<input id="Middle" type="text" class="input" /><br>
+          Last
+					<input id="Last" type="text" class="input" /> <br>
           </div> <br>
 					<div>
-						Address:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<input  type="text" class="input-add" />
+						Address
+						<input id="Address" type="text" class="input-add" />
           </div>
 						<div>
-							Age &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<input  type="text" class="input" />
+							Age
+							<input id="Age" type="text" class="input" />
           </div>
 							<div>
-								Gender &nbsp;&nbsp;
-								<select class="Gender" id="gender" required></select>
+								Gender
+								<select id="Gender" class="Gender" required></select>
 							</div>
 							<div>
-								Birthday&nbsp;
-								<input class="input" type="text" class="input" />
+								Birthday
+								<input id="Birthday" type="text" class="input" />
           </div>
 								<div>
-									Email Add
-									<input class="input" type="text" class="input" />
+									Email
+									<input id="Email" type="text" class="input" />
           </div>
 									<div>
 										Mobile No
-										<input class="input" type="text" class="input" />
+										<input id="Mobile" type="text" class="input" />
           </div>
 										<br />
 										<input class="input" type="submit" class="btn" value="Submit"/>
