--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -18,35 +18,35 @@
 				<div>
 					<h1>LOGIN</h1>
 					<h3>NAME</h3>
-					First
-					<input  id="First" type="text" class="input" /> <br>
-          Middle
+					<label for="First">	First</label>
+					<input  id="First" ngModel name="First" type="text" class="input" /> <br>
+					<label for="Middle"> Middle</label>
 					<input id="Middle" type="text" class="input" /><br>
-          Last
+					<label for="Last"> Last</label>
 					<input id="Last" type="text" class="input" /> <br>
           </div> <br>
 					<div>
-						Address
+						<label for="Address">	Address</label>
 						<input id="Address" type="text" class="input-add" />
           </div>
 						<div>
-							Age
+							<label for="Age">Age</label>
 							<input id="Age" type="text" class="input" />
           </div>
 							<div>
-								Gender
+								<label for="Gender">	Gender</label>
 								<select id="Gender" class="Gender" required></select>
 							</div>
 							<div>
-								Birthday
+								<label for="Birthday">Birthday </label>
 								<input id="Birthday" type="text" class="input" />
           </div>
 								<div>
-									Email
+									<label for="Email">Email</label>
 									<input id="Email" type="text" class="input" />
           </div>
 									<div>
-										Mobile No
+										<label for="Mobile"> Mobile No</label>
 										<input id="Mobile" type="text" class="input" />
           </div>
 										<br />
