--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -40,17 +40,20 @@
 							<div>
 								<label for="Birthday">Birthday </label>
 								<input id="Birthday" ngModel name="Birthday" #birthday="ngModel" (change)="log(Birthday)"type="text" class="input" />
+								<input matInput [matDatepicker]="picker">
+								<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+								<mat-datepicker #picker></mat-datepicker>
+							</div>
+							<div>
+								<label for="Email">Email</label>
+								<input id="Email" ngModel name="Email" #email="ngModel" (change)="log(Email)" type="text" class="input" />
           </div>
 								<div>
-									<label for="Email">Email</label>
-									<input id="Email" ngModel name="Email" #email="ngModel" (change)="log(Email)" type="text" class="input" />
+									<label for="Mobile"> Mobile No</label>
+									<input id="Mobile" ngModel name="Mobile" #mobile="ngModel" (change)="log(Mobile)"type="text" class="input" />
           </div>
-									<div>
-										<label for="Mobile"> Mobile No</label>
-										<input id="Mobile" ngModel name="Mobile" #mobile="ngModel" (change)="log(Mobile)"type="text" class="input" />
-          </div>
-										<br />
-										<input ngModel name="btn" type="submit" #btn="ngModel" class="btn" value="Submit"/>
+									<br />
+									<input ngModel name="btn" type="submit" #btn="ngModel" class="btn" value="Submit"/>
         </div>
 		</form>
 		<div class="adds">
